--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,7 +20,11 @@ RUN apt-get update && \
       libnvonnxparsers-dev \
       libnvinfer-bin \
       nvidia-opencl-dev \
+      clinfo \
       python3 \
       python3-venv \
       python3-libnvinfer && \
     rm -rf /var/lib/apt/lists/*
+
+RUN mkdir -p /etc/OpenCL/vendors && \
+    echo "libnvidia-opencl.so.1" > /etc/OpenCL/vendors/nvidia.icd
