Set default locale

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,7 +48,8 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
-    locale-gen
+    locale-gen && \
+    update-locale LANG=en_US.UTF-8
 
 RUN mkdir -p /etc/OpenCL/vendors && \
     echo "libnvidia-opencl.so.1" > /etc/OpenCL/vendors/nvidia.icd
